[b] Fix text overflow for code in README

--- a/static/css/contact.scss
+++ b/static/css/contact.scss
@@ -103,6 +103,7 @@
       padding: 5px 8px;
       border: none;
       white-space: normal;
+      overflow: scroll;
     }
   }
 
