--- a/static/css/packages/show.scss
+++ b/static/css/packages/show.scss
@@ -419,8 +419,10 @@
           border-radius: 4px;
           margin: 0;
           padding: 5px 8px;
+          display: block;
           border: none;
           white-space: pre;
+          overflow: scroll;
         }
 
         pre {
@@ -428,10 +430,6 @@
           margin: 10px 0;
           padding: 10px 16px;
           border-radius: 4px;
-
-          code {
-            display: block;
-          }
         }
 
         h1,
